iniciar sesion y registrarse funcional

--- a/html/index.html
+++ b/html/index.html
@@ -27,9 +27,9 @@
                 <ul>
                     <li><a href="#">subastas</a></li>
                     <li><a href="#">info</a></li>
-                    <li><a href="#">iniciar sesion</a></li>
-                    <li><a href="#">registrarse</a></li>
                     <li><a href="#">contactanos</a></li>
+                    <li><a href="../php/iniciar_sesion.php" class="btn-login">ingresar</a></li>
+                    <li><a href="../php/registrarse.php" class="btn-login">crea tu cuenta</a></li>
                 </ul>
             </nav>
         </div>
